# High-Precision-Calculator

./: CMakeLists.txt  PiCalculator.cpp  README.md
include/: HighPrecisionCalculator.h  MathConstants.h  arithmetic_operations.h  high_precision_calculator.h  input_tokenizer.h  math_constants.h  myheader.h
include/calcalg/: ArithmeticOperations.h  ExtendedOperations.h  HighPrecisionCalculator.h  InputTokenizer.h  MathUtils.h  settings.h  token.h
src/: InputTokenizer.cpp  MathConstants.cpp  PiCalculator.cpp  arithmetic_operations.cpp  high_precision_calculator.cpp  input_tokenizer.cpp  main.cpp  math_constants.cpp  myheader.h  picalg.h
src/calcalg/: ArithmeticOperations.cpp  ExtendedOperations.cpp  HighPrecisionCalculator.cpp  InputTokenizer.cpp  MathUtils.cpp
tests/: MathConstantsTests.cpp  math_constants_test.cpp  test.cpp
